Add static analysis tools, fix problems found by these tools

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,6 @@ jdk:
   - oraclejdk8
 
 script:
-  - ./gradlew clean assembleDebug test
+  - ./gradlew clean assembleDebug check test
 
 sudo: false
