--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
     repositories {
         google()
         jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.novoda:gradle-static-analysis-plugin:0.5.2'
         
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -22,6 +22,19 @@ allprojects {
     }
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+ext {
+    checkstyleVersion = '8.8'
+    findbugsVersion = '3.0.1'
+    pmdVersion = '6.0.1'
 }
+
+subprojects {
+    apply from: teamPropsFile('static-analysis.gradle')
+}
+
+def teamPropsFile(propsFile) {
+    def teamPropsDir = file('team-props')
+    return new File(teamPropsDir, propsFile)
+}
+
+apply from: teamPropsFile('android-code-quality.gradle')
