--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,9 @@
         <activity
             android:name=".translation.TranslationActivity"
             android:label="@string/translation" />
-        <activity android:name=".about.AboutActivity"></activity>
+        <activity
+            android:name=".about.AboutActivity"
+            android:label="@string/about" />
     </application>
 
 </manifest>
