Apply new design to translation screen and other parts

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".translation.TranslationActivity"
-            android:label="@string/translation" />
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".about.AboutActivity"
             android:label="@string/about" />
