--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity
             android:name=".settings.SettingsActivity"
             android:label="@string/settings" />
+        <activity android:name=".BaseActivity"/>
     </application>
 
 </manifest>
