--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,9 @@ dependencies {
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
     implementation 'com.google.code.gson:gson:2.8.5'
 
+    implementation "com.google.dagger:dagger:2.14.1"
+    annotationProcessor "com.google.dagger:dagger-compiler:2.14.1"
+
     testImplementation 'junit:junit:4.12'
-    testImplementation "org.mockito:mockito-core:2.18.0"
+    testImplementation "org.mockito:mockito-core:2.21.0"
 }
