--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,11 +7,12 @@
         android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:name=".SozlikApp"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".splash.SplashActivity"
+            android:name=".ui.splash.SplashActivity"
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,16 +22,16 @@
         </activity>
         <activity
             android:configChanges="orientation|screenSize"
-            android:name=".MainActivity"
+            android:name=".ui.MainActivity"
             android:theme="@style/AppTheme.NoActionBar"
             android:launchMode="singleInstance"/>
         <activity
-            android:name=".translation.TranslationActivity"
+            android:name=".ui.translation.TranslationActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".about.AboutActivity"/>
+            android:name=".ui.about.AboutActivity"/>
         <activity
-            android:name=".settings.SettingsActivity"/>
+            android:name=".ui.settings.SettingsActivity"/>
     </application>
 
 </manifest>
