--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,6 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
 
@@ -29,6 +28,9 @@ dependencies {
 
     implementation "com.google.dagger:dagger:2.14.1"
     annotationProcessor "com.google.dagger:dagger-compiler:2.14.1"
+
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
     testImplementation 'junit:junit:4.12'
     testImplementation "org.mockito:mockito-core:2.21.0"
